--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,24 +73,16 @@ nav{
     padding: 8px 0;
     color: #fff;
 }
-
 .menuIcon{
     cursor: pointer;
     display:none;
 }
 
 .hero-text-box{
-    /* position: absolute;
-    top: 45%;
-    left: 50%;
-    right:0;
-    transform: translate(-50%, -50%); */
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-.intro_title{
-    margin-top: 50px;
+    margin-top: 2rem;
 }
 h1{
     font-family: var(--family-2);
